# emerOS

./: .gitignore  Cargo.toml  build.rs  rust-toolchain.toml
amd64_lib/: Cargo.toml
amd64_lib/src/: interrupt.rs  lib.rs  memory.rs  serial.rs
amd64_lib/src/interrupt/: gdt.rs  idt.rs
amd64_lib/src/memory/: allocator.rs  heap.rs  paging.rs
amd64_lib/src/memory/allocator/: fixed_size_block.rs
common_lib/: Cargo.toml
common_lib/src/: allocator.rs  lib.rs  locked.rs  memory.rs
common_lib/src/graphic/: console.rs
common_lib/src/memory/: allocator.rs  heap.rs
common_lib/src/memory/allocator/: fixed_size_block.rs
kernel/: Cargo.toml
kernel/src/: graphic.rs  interrupts.rs  main.rs  memory.rs
kernel/src/graphic/: color.rs  console.rs  text_buffer.rs
src/: main.rs
