# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "emer_os"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["kernel", "amd64_lib", "common_lib"]

[profile.dev]
opt-level = 0
debug = true
strip = false
debug-assertions = true
overflow-checks = true
lto = false
panic = "abort"
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = true
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 16
rpath = false

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.3"

[dependencies]
ovmf-prebuilt = "0.1.0-alpha"

[workspace.dependencies]
acpi = "5.0.0"
bootloader_api = "0.11.4"
lazy_static = "1.4.0"
once_cell = { version = "1.19.0", default-features = false }
spin = "0.9.8"
linked_list_allocator = "0.10.5"
uart_16550 = "0.3.0"
x86_64 = "0.14.11"
