[package]
name = "amd64_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acpi = { workspace = true }
bootloader_api = { workspace = true }
lazy_static = { workspace = true, features = ["spin_no_std"] }
linked_list_allocator = { workspace = true }
x86_64 = { workspace = true }
spin = { workspace = true }
uart_16550 = { workspace = true }

common_lib = { path = "../common_lib" }
