[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader_api = { workspace = true }
amd64_lib = { path = "../amd64_lib" }
spin = { workspace = true }
once_cell = { workspace = true, features = ["race", "alloc"] }
