[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader_api = { workspace = true }
once_cell = { workspace = true, features = ["race", "alloc"] }

amd64_lib = { path = "../amd64_lib" }
common_lib = { path = "../common_lib" }

ab_glyph = { version = "0.2.23", features = ["libm"], default-features = false }
